--- a/style.css
+++ b/style.css
@@ -59,7 +59,7 @@ body {
       rgba(34, 25, 0, 0.83),
       rgba(34, 25, 0, 0.83)
     ),
-    url("../img/cta-img-sqshed.jpg");
+    url("img/cta-img-sqshed.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: top;
